Fix image sizing & overflow on small screens

--- a/src/scss/phy/menu-page-phy.scss
+++ b/src/scss/phy/menu-page-phy.scss
@@ -86,7 +86,7 @@
       border-radius: 8px;
       border: 2px solid $color-neutral-200;
       img {
-        width: 15%;
+        width: 3.5rem;
       }
       &.disabled {
         box-shadow: none !important;
